replace user id on username in user handler
